# DTPatternRecognition_tfg_sim

./: .gitignore  EventDumpList_StdToBayes.csv  README.md  concentrator.py  dataFromRoot.ipynb  dumpDTDigisFromNtuples.py  ejemplo_blanca.ipynb  geometry.py  main.py  pyproject.toml  testRun.py  train_patterns.py
ejemplo_blanca/: df_digis_nodos.csv  ejemplo_blanca.ipynb  gnn_prueba.ipynb
geometry/: CMSDT.py  DriftCell.py  Layer.py  MBstation.py
newGeo/: Digis.py  driftTubes.py  dtGeometry.py
objects/: DriftCell.py  Layer.py  MBstation.py  Primitive.py
particle_objects/: Digis.py  Muon.py  Pattern.py  Primitive.py
plotter/: DTGeometryTest.cc  cmsDraw.py  dtPlotter.py  dtPlotter_test.py  plotter.py
rootEnv/: dataframe_generator.ipynb  environment.yml  grafos.ipynb  grafos_2.ipynb  grafos_datos_grandes.ipynb  grafos_datos_grandes_02.ipynb  grafos_datos_grandes_03.ipynb  grafos_datos_grandes_04.ipynb
rootEnv/newGeo/: DTGeometry.xml  nn_basic_lib.py
scripts/: create_rootfiles.sh  dump_digis.sh
src/: DriftCell.py  Layer.py  MBstation.py  Muon.py  Pattern.py  Primitive.py  pattern_plotter.py  pattern_trainer.py
tests/: cnn.py  dtPlotter_test.py  ejemplo_onehot.ipynb  emulatorTest.py  simple_NN_test.py  testRun.py
tools/: dataFromRoot.ipynb  dumpDTDigisFromNtuples.py  testRun.py  train_patterns.py
utils/: DTPlotter.py  DTTrainer.py  baseDumper.py  geometry.py  pattern_plotter.py  pickle_toc.py  plotter.py  rfile_gen.py
